# comet-eventbus

./: .gitignore  Cargo.toml  README.md  build.rs  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: CI.yml  lint.yml  rustdoc.yml
ce-macros/: Cargo.toml
ce-macros/src/: lib.rs
ce_macros/: all.html  index.html
comet-eventbus/: Cargo.toml  build.rs
comet-eventbus/examples/: README.md  local_async.rs  sync.rs
comet-eventbus/examples/bridged/: bus_a.rs  bus_b.rs  def.rs  main.rs
comet-eventbus/proto/: bridge.proto
comet-eventbus/src/: event.rs  impl_async.rs  impl_sync.rs  lib.rs  service.rs  topic.rs  topic_key.rs
comet-eventbus/src/bridge/: mod.rs
comet-eventbus/src/tests/: mod.rs  test_async.rs
comet_eventbus/: all.html  attr.async_trait.html  enum.ListenerError.html  index.html  sidebar-items.js  struct.Event.html  struct.EventListener.html  struct.Eventbus.html  struct.Topic.html  struct.TopicKey.html  trait.Listener.html  type.EventListeners.html  type.TopicHandlersMap.html
comet_eventbus/bridge/: enum.BridgeError.html  index.html  sidebar-items.js  struct.BridgeListener.html  struct.BridgedEventListener.html  struct.BridgedTopic.html  struct.BridgerClientInner.html  struct.EventbusBridge.html  struct.SerializedMessage.html  type.BridgerClient.html
comet_eventbus/bridge/bridge/bridger_client/: struct.BridgerClient.html
comet_eventbus/event/: struct.Event.html
comet_eventbus/event_listener/: struct.EventListener.html
comet_eventbus/impl_async/: trait.Listener.html
comet_eventbus/topic/: struct.Topic.html
comet_eventbus/topic_key/: struct.TopicKey.html
examples/: local_async.rs  sync.rs
examples/bridged/: bus_a.rs  bus_b.rs
implementors/comet_eventbus/impl_async/: trait.Listener.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.AsRef.js  trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
macro-test/: Cargo.toml
macro-test/src/: lib.rs
src/: bridge.rs  event_listener.rs  impl_async.rs  impl_sync.rs  lib.rs  topic_key.rs
src/ce_macros/: lib.rs.html
src/comet_eventbus/: bridge.rs.html  event.rs.html  event_listener.rs.html  impl_async.rs.html  lib.rs.html  topic.rs.html  topic_key.rs.html
src/comet_eventbus/bridge/: bridge.rs.html  mod.rs.html
src/tests/: mod.rs  test_async.rs  test_sync.rs
