[package]
name = "comet-eventbus"
version = "0.1.0"
edition = "2021"

[dependencies]
anymap = "0.12"
async-trait = "0.1"
futures = { version = "0.3", optional = true }
hex = "0.4"
parking_lot = { version = "0.12", optional = true }
rand = "0.8"
rayon = { version = "1.5", optional = true }
tokio = { version = "1.20", default-features = false, features = ["rt", "sync"], optional = true }

[dev-dependencies]
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }

[features]
default = ["async"]
async = ["futures", "tokio"]
sync = ["parking_lot"]
sync_parallel = ["rayon"]
