[package]
name = "comet-eventbus"
authors = ["Akase Cho <light.tsing@gmail.com>"]
version = "0.1.0-pre-alpha.4"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
keywords = ["async", "library", "concurrency", "channel", "eventbus"]
description = "An implementation of strong-typed sync and asynchronous eventbus."
categories = ["asynchronous", "concurrency"]
repository = "https://github.com/lightsing/comet-eventbus.git"
include = [
    "build.rs",
    "src/**/*.rs",
    "proto/**/*.proto",
    "Cargo.toml",
]

[dependencies]
anymap = "0.12"
async-trait = "0.1"
bincode = { version = "1.3.3", optional = true }
futures = { version = "0.3", optional = true }
hex = "0.4"
log = "0.4.17"
parking_lot = { version = "0.12", optional = true }
prost = { version = "0.10", optional = true }
rand = "0.8"
rayon = { version = "1.5", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
tokio = { version = "1.20", default-features = false, features = ["rt", "sync"], optional = true }
tonic = { version = "0.7", optional = true }
ce-macros = { version = "0.1.0", path = "../ce-macros", optional = true }
thiserror = "1.0.31"

[build-dependencies]
tonic-build = { version = "0.7", optional = true }

[dev-dependencies]
pretty_env_logger = "0.4"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "time"] }

[features]
default = ["async"]
macros = ["ce-macros"]
async = ["futures", "tokio"]
sync = ["parking_lot"]
sync_parallel = ["sync", "rayon"]
bridge = ["async", "bincode", "prost", "serde", "tonic", "tonic-build"]

[package.metadata.docs.rs]
features = ["async", "bridge"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
