[package]
name = "macro-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ce-macros = { path = "../ce-macros", features = ["async"] }
comet-eventbus = { path = "../comet-eventbus", features = ["async"], default-features = false }